# computationalEngineering

./: .gitignore  .gitmodules  CONTRIBUTING.md  ComputationalEngineering.slnx  README.md  codeInterface.cs  codeInterface.csproj  codeInterface.html  codeInterface.py  computationalEngineering.sln
computationalEngineering/Surfboard/SurfPhysics/: __init__.py  __main__.py  analyzer.py  constants.py  pyproject.toml  requirements.txt  runner.py  units.py
computationalEngineering/Surfboard/SurfPhysics/export/: __init__.py  deviationExporter.py  meshSampler.py  stlExporter.py  viewerExporter.py
computationalEngineering/Surfboard/SurfPhysics/geometry/: __init__.py  board.py  crossSection.py  meshLoader.py  outline.py  parameters.py  rocker.py  surfaceMeshGenerator.py
computationalEngineering/Surfboard/SurfPhysics/hydrodynamics/: __init__.py  buoyancy.py  fins.py  forceBalance.py  friction.py  planing.py  protocols.py
computationalEngineering/Surfboard/SurfPhysics/optimization/: __init__.py  coordinateTransformer.py  directMapper.py  parameterOptimizer.py
computationalEngineering/Surfboard/SurfPhysics/validation/: __init__.py  comparisonReport.py  deviationVisualizer.py  distanceMetrics.py  finSegmentation.py  meshAlignment.py  meshComparison.py  reverseEngineer.py  test_comparison.py
computationalEngineering/Surfboard/SurfPhysics/visualization/: __init__.py  crossSectionViewer.py  dashboard.py  forcePlots.py  geometryPlots.py  referenceComparisonViewer.py  theme.py  visualizer.py  wavePlots.py
computationalEngineering/Surfboard/SurfPhysics/waves/: __init__.py  (+3 more)
(+205 files in other folders)
