[project]
name = 'SurfPhysics'
version = '0.1.0'
description = 'Surfboard physics simulation: wave theory, hydrodynamics, and visualization'
requires-python = '>= 3.10'
dependencies = [
    'numpy >= 1.24',
    'scipy >= 1.11',
    'plotly >= 5.18',
    'trimesh >= 4.0',
]

[project.scripts]
surfphysics = 'SurfPhysics.runner:main'

[build-system]
requires = ['setuptools >= 68.0']
build-backend = 'setuptools.backends._legacy:_Backend'
